k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: nspersonalpage
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  minReadySeconds: 5
  replicas: 2
  selector:
    matchLabels:
      mykey: myvalue
  template:
    metadata:
      name: feelthesteelapppod
      labels:
        mykey: myvalue
    spec:
      containers:
      - name: feelthesteelapp
        image: mybandscontainerregistry.azurecr.io/feelthesteelapp:latest
        ports:
        - containerPort: 8080
