k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: feelthesteelapppod
  namespace: nsfeelthesteel
spec:
  containers:
    - name: feelthesteelapp
      image: mybandscontainerregistry.azurecr.io/feelthesteelapp:latest
      ports:
        - containerPort: 8080
      resources:
        limits:
          memory: 512Mi
          cpu: "1"
        requests:
          memory: 256Mi
          cpu: "0.2"
