k8s/serviceClusterIP_PersonalPage.yaml
apiVersion: v1
kind: Service
metadata:
  name: backendpersonalpage
  namespace: nsfeelthesteel
spec:
  type: ClusterIP
  selector:
    app: backendpersonalpage
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
