k8s/serviceClusterIP_frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontendClusterIP
  namespace: nsfeelthesteel
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
