k8s/serviceClusterIP_ftsbackend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: nsfeelthesteel
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
