k8s/serviceLoadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontendlb
  namespace: nsfeelthesteel
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
