k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: svcfeelthesteelapp
  namespace: nsfeelthesteel
spec:
  type: LoadBalancer
  selector:
    mykey: myvalue
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
